--- a/BareBones/NgApp/package.json
+++ b/BareBones/NgApp/package.json
@@ -32,6 +32,7 @@
     "@types/node": "~8.9.5",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.4"
+    "typescript": "~3.2.4",
+    "npm-registry-fetch": ">=4.0.5"
   }
 }
